# assignment1-basics

./: .gitignore  pyproject.toml
bpe_rs/: Cargo.toml  README.md
bpe_rs/src/: lib.rs
cs336_basics/: bpe.py  nn.py
scripts/: README.md  benchmark_find_merges_scalene.py  benchmark_find_merges_v3_vs_rust.py
tests/: adapters.py  test_train_bpe.py
