[package]
name = "bpe_rs"
version = "0.1.0"
edition = "2021"
description = "High-performance BPE find_merges in Rust (PyO3)"

[lib]
name = "bpe_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
rustc-hash = "2.0"  # faster hasher for integer pairs

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
